[tool.poetry]
name = "github-flask"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "github_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
Flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
