[tool.poetry]
name = "github-flask"
version = "0.0.6"
description = ""
authors = ["Cenk Alti <cenkalti@gmail.com>"]
 
readme = "README.rst"
packages = [{include = "flask_github.py"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.2"
Flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
